// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XIRR > with correct config > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "dt_timeline_timestamp.year",
          "type": "displayForm",
        },
        "localIdentifier": "a_dt_timeline_timestamp.year",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "sample_xirr",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_sample_xirr",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "dt_timeline_timestamp.year",
              "type": "displayForm",
            },
            "localIdentifier": "a_dt_timeline_timestamp.year",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_dt_timeline_timestamp.year",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "sample_xirr",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_sample_xirr",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with correct config > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "dt_timeline_timestamp.year",
          "type": "displayForm",
        },
        "localIdentifier": "a_dt_timeline_timestamp.year",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "sample_xirr",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_sample_xirr",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "dt_timeline_timestamp.year",
              "type": "displayForm",
            },
            "localIdentifier": "a_dt_timeline_timestamp.year",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_dt_timeline_timestamp.year",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "sample_xirr",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_sample_xirr",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "dt_timeline_timestamp.year",
          "type": "displayForm",
        },
        "localIdentifier": "a_dt_timeline_timestamp.year",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "sample_xirr",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_sample_xirr",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "dt_timeline_timestamp.year",
              "type": "displayForm",
            },
            "localIdentifier": "a_dt_timeline_timestamp.year",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_dt_timeline_timestamp.year",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "sample_xirr",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_sample_xirr",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with drilling on single measure with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with only measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "sample_xirr",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_sample_xirr",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "sample_xirr",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_sample_xirr",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with only measure > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with semantically wrong measure > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "dt_timeline_timestamp.year",
          "type": "displayForm",
        },
        "localIdentifier": "a_dt_timeline_timestamp.year",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_6b1411d5_e253_418e_8fd3_137a9f56ea92",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "dt_timeline_timestamp.year",
              "type": "displayForm",
            },
            "localIdentifier": "a_dt_timeline_timestamp.year",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
        "a_dt_timeline_timestamp.year",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "6b1411d5-e253-418e-8fd3-137a9f56ea92",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_6b1411d5_e253_418e_8fd3_137a9f56ea92",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR > with semantically wrong measure > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;
